<resources>
    <string name="app_name">OS</string>
    <string name="welcome_to_operating_system_cpu_scheduling_algorithms">CPU Scheduling Algorithms</string>
    <string name="fcfs">First Come First Serve</string>
    <string name="sjf_non_preemptive">SJF (Non-preemptive)</string>
    <string name="sjf_preemptive">SJF (preemptive)</string>
    <string name="welcome_to_fcfs">Welcome To FCFS</string>
    <string name="round_robin">Round Robin</string>
    <string name="priority_non_preemptive">Priority(Non-Preemptive)</string>
    <string name="priority_preemptive">Priority(Preemptive)</string>
    <string name="algo_name">Algo Title</string>
    <string name="process_id_p0_p1">Process Name</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="brust_time">Brust Time</string>
    <string name="opt">Priority value / Time Quantum</string>
    <string name="insert">Insert</string>
    <string name="calculate">Calculate</string>
</resources>
