<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/welcome_to_operating_system_cpu_scheduling_algorithms"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/butt_lay"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/FCFS"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:focusableInTouchMode="true"
            android:text="@string/fcfs"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />

        <Button
            android:textSize="20sp"
            android:id="@+id/sjf"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/sjf_non_preemptive"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />

        <Button
            android:textSize="20sp"
            android:id="@+id/sjf2"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/sjf_preemptive"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop" />


    </LinearLayout>

</LinearLayout>